Changed names to lower case in package.json

--- a/Web Development/1.Tutorials/6.MongoDB/Tut_2/package.json
+++ b/Web Development/1.Tutorials/6.MongoDB/Tut_2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cwh",
+  "name": "tut_2",
   "version": "1.0.0",
   "description": "This is a package we created while studying and exploring node and express",
   "main": "app.js",
