--- a/Web Development/1.Tutorials/7.SSR/Tut_2/package.json
+++ b/Web Development/1.Tutorials/7.SSR/Tut_2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cwh",
+  "name": "tut_2",
   "version": "1.0.0",
   "description": "This is a package we created while studying and exploring node and express",
   "main": "app.js",
